# xplugd

./: .gitignore  .travis.yml  AUTHORS  ChangeLog.md  LICENSE  Makefile  Makefile.am  README.md  configure.ac  edid-parse.c  edid.c  edid.h  exec.c  indent.sh  input.c  randr.c  sample.script  srandrd.1  srandrd.c  srandrd.script  xplugd.1  xplugd.c  xplugd.h
debian/: .gitignore  changelog  control  copyright  watch
man/: Makefile.am  xplugd.1
src/: Makefile.am  edid.c  edid.h  exec.c  input.c  randr.c  xplugd.c  xplugd.h
